finished paprika/other page, fixed hor. overflow,  found out about img load event

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     font-size: 20px;
     font-family: var(--font-body);
     line-height: 1.5;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 /* * {
